--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,6 +1,10 @@
+i {
+	margin-right: 5px;
+}
+
 #iron-router-progress {
-    background-color : green
-    box-shadow       : 0 0 5px gray;
+  background-color: #86FBFF;
+  box-shadow: 0 0 5px gray;
 }
 
 .container{
@@ -20,7 +24,7 @@
 	margin-top: 10px;
 }
 
-.tags {
+.tag-display {
 	margin-top: 10px;
 	font-style: italic;
 	font-size: 80%;
@@ -31,6 +35,12 @@
 	margin-left: 20px;
 }
 
-i {
-	margin-right: 5px;
+.pre {
+  white-space: pre;
+}
+
+.footer a {
+	margin-left: 30px;
+	margin-right: 30px;
+	color: gray;
 }
