--- a/client/templates/addRecipy.html
+++ b/client/templates/addRecipy.html
@@ -4,11 +4,11 @@
 		<form class='new-recipy'>
 			<div class='form-group '>
 				<label for='title'>Rubrik</label>
-				<input type='text' class='form-control title' name='title'>
+				<input type='text' class='form-control title' name='title' required data-validation-required-message='Rubrik måste finnas'>
 			</div>
 			<div class='form-group '>
 				<label for='comment'>Kommentar</label>
-				<textarea class='form-control comment' rows='2' name='comment'></textarea>
+				<textarea class='form-control comment' rows='2' name='comment' ></textarea>
 			</div>
 
 			<div class='form-group '>
@@ -18,15 +18,19 @@
 
 			<div class='form-group '>
 				<label for='description'>Beskriving</label>
-				<textarea class='form-control description' rows='5' name='description'></textarea>
+				<textarea class='form-control description' rows='5' name='description' required data-validation-required-message='Receptet måste ha en beskrivning'></textarea>
 			</div>
 
 			<div class='form-group'>
 				<label for='tags'>Taggar</label>
-				<input type='text' class='form-control tags' name='tags' placeholder='Skilj åt med komma t.ex. Soppa, Varmrätt, Snabbmat'>
+				<input type='text' class='form-control tags' name='tags' placeholder='Skilj åt med komma t.ex. Soppa, Varmrätt, Snabbmat' required data-validation-required-message='Minst en tag måste ages'>
 			</div>
 			
 			<input type='button' class='btn btn-default' value='Spara'>
 		</form>
 	</div>
+
+	<script>
+	  $(function () { $("input,select,textarea").not("[type=submit]").jqBootstrapValidation(); } );
+	</script>
 </template>
