--- a/client/templates/recipy.html
+++ b/client/templates/recipy.html
@@ -8,8 +8,8 @@
 	<div class='page-header'>
 		<h1>{{title}}</h1>
 	</div>
-	<div class='comment'>{{comment}}</div>
-	<div class='ingrediences'>{{ingrediences}}</div>
-	<div class='description'>{{description}}</div>
-	<div class='tags'>{{tags}}</div>
+	<div class='comment pre'>{{comment}}</div>
+	<div class='ingrediences pre'>{{ingrediences}}</div>
+	<div class='description pre'>{{description}}</div>
+	<div class='tag-display'>{{tags}}</div>
 </template>
