--- a/client/templates/addRecipy.html
+++ b/client/templates/addRecipy.html
@@ -4,7 +4,7 @@
 		<form class='new-recipy'>
 			<div class='form-group '>
 				<label for='title'>Rubrik</label>
-				<input type='text' class='form-control title' name='title''>
+				<input type='text' class='form-control title' name='title'>
 			</div>
 			<div class='form-group '>
 				<label for='comment'>Kommentar</label>
