--- a/client/templates/navBar.html
+++ b/client/templates/navBar.html
@@ -1,21 +1,22 @@
 <template name='navbar'>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/recipies">Fogelmat</a>
-      </div>
-
-    <ul class="nav navbar-nav">
-      <li><a href="/recipies"><i class="glyphicon glyphicon-home"></i>Recept</a></li>
-      <li><a href="/addRecipy"><i class="glyphicon glyphicon-book"></i>Nytt recept</a></li>
-    </ul>
+        <div class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/recipies">Fogelmat</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="/recipies"><i class="glyphicon glyphicon-home"></i>Recept</a></li>
+              <li><a href="/addRecipy"><i class="glyphicon glyphicon-book"></i>Nytt recept</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {{> loginButtons}} <!-- here -->
+            </ul>
+        </div>
     </div>
-  </nav>
-</template>
+</template> 
