--- a/client/templates/navBar.html
+++ b/client/templates/navBar.html
@@ -1,7 +1,7 @@
 <template name='navbar'>
-        <div class="navbar navbar-default" role="navigation">
+    <div class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/recipies">Fogelmat</a>
+            <a class="navbar-brand" href="/">Fogelmat</a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -11,8 +11,13 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/recipies"><i class="glyphicon glyphicon-home"></i>Recept</a></li>
-              <li><a href="/addRecipy"><i class="glyphicon glyphicon-book"></i>Nytt recept</a></li>
+              <li>
+                    <a href="/"><i class="glyphicon glyphicon-home"></i>Recept</a>
+                </li>
+                {{#if currentUser}}
+                    <li><a href="/addRecipy"><i class="glyphicon glyphicon-book"></i>   Nytt recept</a>
+                    </li>
+                {{/if}}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {{> loginButtons}} <!-- here -->
