Added edit recipy. Added sign up/login and started working on i18n.

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -44,3 +44,11 @@ i {
 	margin-right: 30px;
 	color: gray;
 }
+
+.editRecipyBtn {
+	margin-top: 20px;
+}
+
+.updateRecipyBtn {
+	margin-top: 20px;
+}
