--- a/client/templates/recipy.html
+++ b/client/templates/recipy.html
@@ -12,4 +12,5 @@
 	<div class='ingrediences pre'>{{ingrediences}}</div>
 	<div class='description pre'>{{description}}</div>
 	<div class='tag-display'>{{tags}}</div>
+	<a href='/editRecipy/{{slug}}'>Ändra</a>
 </template>
