Update recipy done

--- a/client/templates/addRecipy.html
+++ b/client/templates/addRecipy.html
@@ -26,7 +26,7 @@
 				<input type='text' class='form-control tags' name='tags' placeholder='Skilj åt med komma t.ex. Soppa, Varmrätt, Snabbmat'>
 			</div>
 			
-			<input type='button' class='btn btn-default' value='Spara'>
+			<input type='button' class='btn btn-default addRecipy' value='Spara'>
 		</form>
 	</div>
 </template>
