--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -30,6 +30,13 @@ i {
 	font-size: 80%;
 }
 
+.recipyBy {
+	margin-top: 10px;
+	font-style: oblique;
+	font-size: 110;
+	font-weight: bold;
+}
+
 .addRecipyForm {
 	margin-right: 20px;
 	margin-left: 20px;
