Fixed bug creating slugs

--- a/client/templates/addRecipy.html
+++ b/client/templates/addRecipy.html
@@ -25,8 +25,7 @@
 				<label for='tags'>Taggar</label>
 				<input type='text' class='form-control tags' name='tags' placeholder='Skilj åt med komma t.ex. Soppa, Varmrätt, Snabbmat'>
 			</div>
-			
-			<input type='button' class='btn btn-default addRecipy' value='Spara'>
+			<input type='button' class='btn btn-default addRecipy glyphicon glyphicon-edit' value='Spara'>
 		</form>
 	</div>
 </template>
