Comment in recipy listing

--- a/client/templates/recipies.html
+++ b/client/templates/recipies.html
@@ -22,7 +22,7 @@
 <template name='recipy'>
 	<div class='well'>
 		<h2>{{title}}</h2>
-		{{description}}
+		{{comment}}
 		<div><a href="/recipy/{{slug}}">Läs mer</a></div>
 	</div>
 </template>
