About page added

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -1,3 +1,16 @@
 <template name='about'>
 	<h1>Om</h1>
+	<br />
+	Fogelmat har skapats av Helena, Henrik och Ramona Fogelberg. Den finns till av två anledningar. 
+	<br />
+	För det första ville vi kunna samla de recept vi använder ofta på ett smidigt sätt. Alla lappar, papper och
+	kokböcker kors och tvärs var helt enkelt för opraktiskt. Vi använder mest nätet som vår kokbok i alla fall 
+	numera, så det var smidigast att lägga även våra recept där.
+	<br />
+	Den andra anledningen är att Henrik, programmeraren i familjen, håller på att lära sig en ny teknik för att
+	utveckla webbapplikationer och det bästa sättet att lära sig var ett bygga ett riktigt projekt. För den intresserade är Fogelmat byggd i Meteor med Coffeescrit som programmeringsspråk och MongoDb som databasen.
+	<br />
+	Just nu är det den allra första versionen som ligger uppe och en hel del idéer finns i bakhuvudet. Så håll utkik!
+	<br />
+	Har du själv några favoritrecept? Lägg gärna in dem.
 </template>
