Contact page added

--- a/client/templates/contact.html
+++ b/client/templates/contact.html
@@ -1,3 +1,8 @@
 <template name='contact'>
-	<h1>Kontact</h1>
+	<h1>Kontakt</h1>
+	Har du några frågor eller synpunkter? 
+	<br/>
+	<div class='alert alert-info'>
+		Kontakta oss via <a href="mailto:henrxixkxx.fxxxoxgelxberg@gmxxxaxixl.com" onmouseover="this.href=this.href.replace(/x/g,'');">mail</a> eller <a href="http://txxwitxxxter.coxxmx/hfoxxxgelbexxrgxx" onmouseover="this.href=this.href.replace(/x/g,'');">twitter</a>
+	</div>
 </template>
