--- a/client/templates/recipies.html
+++ b/client/templates/recipies.html
@@ -22,8 +22,29 @@
 <template name='recipy'>
 	<div class='well'>
 		<h2>{{title}}</h2>
-		{{comment}}
-		<div><a href="/recipy/{{slug}}">Läs mer</a></div>
+		<div class='comment pre'>{{comment}}</div>
+		<div class='details' id="{{slug}}">
+			<div class='ingrediences pre'>{{ingrediences}}</div>
+			<div class='description pre'>{{description}}</div>
+			<div class='recipyBy'>Recept av {{username}}</div>
+			<div class='tag-display'>{{tags}}</div>
+			{{#if currentUser}}
+				<a href='/editRecipy/{{slug}}' class='btn btn-warning editRecipyBtn hidden'><i class="glyphicon glyphicon-edit"></i>Ändra</a>
+			{{/if}}
+		</div>
+		<!-- <div><a href="/recipy/{{slug}}" class='readMore'>Läs mer</a></div> -->
+		<button class='btn btn-primary expandBtn'>Läs mer</button>
+		<br />
+		<br />
+
+		<script>
+			$('.expandBtn').click(function (){
+    		$(this).prev('.details').fadeIn(2000);
+			});
+
+		</script>
+
+
 	</div>
 </template>
 
