Fix on edit link

--- a/client/templates/recipies.html
+++ b/client/templates/recipies.html
@@ -28,9 +28,9 @@
 			<div class='description pre'>{{description}}</div>
 			<div class='recipyBy'>Recept av {{username}}</div>
 			<div class='tag-display'>{{tags}}</div>
-			{{#if currentUser}}
+			<!-- {{#if currentUser}} -->
 				<a href='/editRecipy/{{slug}}' class='btn btn-warning editRecipyBtn hidden'><i class="glyphicon glyphicon-edit"></i>Ändra</a>
-			{{/if}}
+			<!-- {{/if}} -->
 		</div>
 		<!-- <div><a href="/recipy/{{slug}}" class='readMore'>Läs mer</a></div> -->
 		<button class='btn btn-primary expandBtn'>Läs mer</button>
