--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -12,9 +12,8 @@ i {
 	margin-right: 20px;
 }
 
-.comment {
+.displayComment {
 	margin-top: 10px;
-	width: 60%;
 }
 
 .ingrediences {
@@ -45,6 +44,7 @@ i {
 
 .pre {
   white-space: pre;
+	word-wrap: break-word;
 }
 
 .footer a {
