--- a/client/layouts/layout.html
+++ b/client/layouts/layout.html
@@ -1,9 +1,11 @@
 <head>
 	<title>Fogelmat</title>
+	<link href='fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
 </head>
 
 <template name='layout'>
   <div class='container'>
+		<div><h1 class='page-title'>Fogelmat</h1></div>
   	{{> navbar}}
 		{{> yield}}
 		{{> footer}}
