--- a/client/templates/navBar.html
+++ b/client/templates/navBar.html
@@ -19,9 +19,7 @@
                     </li>
                 {{/if}}
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-                {{> loginButtons}} <!-- here -->
-            </ul>
+            <ul class="nav navbar-nav navbar-right">{{> loginButtons}}</ul>
         </div>
     </div>
 </template> 
