--- a/client/templates/recipies.html
+++ b/client/templates/recipies.html
@@ -21,7 +21,7 @@
 
 <template name='recipy'>
 	<div class='well'>
-		<h2>{{title}}</h2>
+		<h2 class='recipy-title'>{{title}}</h2>
 		<div class='displayComment pre'>{{comment}}</div>
 		<div class='details' id="{{slug}}">
 			<div class='ingrediences pre'>{{ingrediences}}</div>
