--- a/client/templates/recipies.html
+++ b/client/templates/recipies.html
@@ -47,5 +47,5 @@
 
 
 <template name='tag'>
-	<li class='list-unstyled text-info'><a href='/recipies/{{name}}'>{{name}}</a></li>
+	<li class='list-unstyled text-info '><a class='tag-list' href='/recipies/{{name}}'>{{name}}</a></li>
 </template>
