--- a/client/templates/recipy.html
+++ b/client/templates/recipy.html
@@ -8,7 +8,7 @@
 	<div class='page-header'>
 		<h1>{{title}}</h1>
 	</div>
-	<div class='comment pre'>{{comment}}</div>
+	<div class='comment pre lead'>{{comment}}</div>
 	<div class='ingrediences pre'>{{ingrediences}}</div>
 	<div class='description pre'>{{description}}</div>
 	<div class='recipyBy'>Recept av {{username}}</div>
