--- a/client/templates/recipies.html
+++ b/client/templates/recipies.html
@@ -1,5 +1,5 @@
 <template name='recipies'>
-	<div class='row'>
+	<div class='row recipies'>
 		<div class='col-xs-2 navbar-collapse collapse'>
 			<ul class="nav nav-pills nav-stacked">
 				{{#each tags}}
