--- a/client/templates/tag.html
+++ b/client/templates/tag.html
@@ -1,3 +1,3 @@
 <template name='tag'>
-	<li class='list-unstyled text-info' role="presentation"><a class='tag-list' href='/recipies/{{name}}'>{{name}}</a></li>
+	<li class='list-unstyled text-info tag' role="presentation"><a class='tag-list' href='/recipies/{{name}}'>{{name}}</a></li>
 </template>
