--- a/client/styles/fontSize.css
+++ b/client/styles/fontSize.css
@@ -19,10 +19,26 @@ h2 {
 	font-size: 4.5vw;
 }
 
+.recipyCommentText {
+	font-size: 2.2vw;
+}
+
+.recipyIngrediencesText {
+	font-size: 2.2vw;
+}
+
+.recipyDescriptionText {
+	font-size: 2.2vw;
+}
+
 .mainText {
-	font-size: 2.7vw;
+	font-size: 2.2vw;
 }
 
 .navbar i after{
 	font-size: 1.9vw;
+}
+
+.tag {
+	font-size: 2.0vw;
 }
