--- a/client/templates/recipyDetail.html
+++ b/client/templates/recipyDetail.html
@@ -1,18 +1,18 @@
 <template name='recipy'>
-	<div class='well'>
+	<div class='recipy'>
 		<h2 class='recipy-title'>{{title}}</h2>
-		<div class='displayComment pre mainText'>{{comment}}</div>
+		<div class='displayComment pre recipyCommentText'>{{comment}}</div>
 		<div class='details' id="{{slug}}">
-			<div class='ingrediences pre mainText'>{{ingrediences}}</div>
-			<div class='description pre mainText'>{{description}}</div>
-			<div class='recipyBy mainText'>Recept av <a href="users/{{currentUser.username}}">{{username}}</a></div>
+			<div class='ingrediences pre recipyIngrediencesText'>{{ingrediences}}</div>
+			<div class='description pre recipyDescriptionText'>{{description}}</div>
+			<div class='recipyBy commentText'>Recept av <a href="users/{{currentUser.username}}">{{username}}</a></div>
 			<div class='tag-display mainText'>{{tags}}</div>
 
 			{{#if $eq currentUser.username username}}
 				<a href='/editRecipy/{{slug}}' class='btn btn-warning editRecipyBtn'><i class="glyphicon glyphicon-edit"></i>Ändra</a>
 			{{/if}}
 		</div>
-		<button class='btn btn-primary expandBtn'>Läs mer</button>
+		<button class='btn btn-lg expandBtn'>Läs mer</button>
 	</div>
 
 	<script>
