--- a/client/templates/recipies.html
+++ b/client/templates/recipies.html
@@ -1,7 +1,7 @@
 <template name='recipies'>
-	<div class='row recipies'>
+	<div class='row'>
 		<div class='col-xs-2 navbar-collapse collapse'>
-			<ul class="nav nav-pills nav-stacked">
+			<ul class="nav nav-pills nav-stacked recipies">
 				{{#each tags}}
 					{{> tag}}
 				{{/each}}
