Removed box in page title

--- a/client/layouts/layout.html
+++ b/client/layouts/layout.html
@@ -6,7 +6,7 @@
 
 <template name='layout'>
   <div class='container'>
-		<div class='title'><h1 class='page-title'>Fogelmat</h1></div>
+		<h1 class='page-title'>Fogelmat</h1>
   	{{> navbar}}
 		{{> yield}}
 		{{> footer}}
