--- a/client/layouts/layout.html
+++ b/client/layouts/layout.html
@@ -5,7 +5,7 @@
 </head>
 
 <template name='layout'>
-  <div class='container'>
+  <div class='container-fluid'>
 		<h1 class='page-title'>Fogelmat</h1>
   	{{> navbar}}
 		{{> yield}}
