--- a/client/templates/navBar.html
+++ b/client/templates/navBar.html
@@ -1,5 +1,5 @@
 <template name='navbar'>
-    <div class="navbar navbar-default" role="navigation">
+    <div class="navbar navbar-default navbar-collapse" role="navigation">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">Fogelmat</a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
